updated ST3, removed unneeded files

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,5 @@
 .DS_Store
 sublime-text-2/User/Package Control.last-run
+sublime-text-3/User/Package Control.last-run
+sublime-text-3/User/Package Control.cache/
+sublime-text-3/User/linters/
