Updated themes to base16-eighties, updated tmux.

--- a/_tmux.conf
+++ b/_tmux.conf
@@ -29,23 +29,6 @@ setw -g aggressive-resize on
 # use vim keybindings in copy mode
 setw -g mode-keys vi
 
-# colors
-# set pane colors - hilight the active pane
-set-option -g pane-border-fg colour235 #base02
-set-option -g pane-active-border-fg colour240 #base01
-
-# colorize messages in the command line
-set-option -g message-bg black #base02
-set-option -g message-fg brightred #orange
-
-# status bar color
-set-option -g status-bg colour235 #base02
-set-option -g status-fg yellow #yellow
-set-option -g status-attr dim 
-set-window-option -g window-status-current-fg brightred #orange
-set-window-option -g window-status-current-bg colour236 
-set-window-option -g window-status-current-attr bright
-
 # status bar config
 set -g status-left ""
 set -g status-left-length 50
@@ -56,3 +39,10 @@ set-window-option -g automatic-rename off
 
 # listen to alerts from all windows
 set -g bell-action any
+
+# Add resize hotkeys for OS X (Ctrl-Arrows are for Mission Control)
+# Allow repeat (-r) to speed the process up
+bind-key -r S-Up    resize-pane -U
+bind-key -r S-Down  resize-pane -D
+bind-key -r S-Left  resize-pane -L
+bind-key -r S-Right resize-pane -R
