Added tmux plugins + tmux-resurrect.

--- a/_tmux.conf
+++ b/_tmux.conf
@@ -1,3 +1,7 @@
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+
 # use UTF8
 set -g utf8
 set-window-option -g utf8 on
@@ -46,3 +50,6 @@ bind-key -r S-Up    resize-pane -U
 bind-key -r S-Down  resize-pane -D
 bind-key -r S-Left  resize-pane -L
 bind-key -r S-Right resize-pane -R
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
