--- a/_tmux.conf
+++ b/_tmux.conf
@@ -1,23 +1,30 @@
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @resurrect-capture-pane-contents 'on'
 
 # use UTF8
 set -g utf8
 set-window-option -g utf8 on
 
 # look good
+#set -g default-terminal "xterm-256color"
 set -g default-terminal "screen-256color"
 
 # Start window numbering at 1
 set -g base-index 1
 
+set -g set-titles 'on'
+
+# Pass fn-keys
+set-option -g xterm-keys 'on'
+
 # C-b is not acceptable -- Vim uses it
 set-option -g prefix C-a
 bind-key C-a last-window
 
-# Rather than constraining window size to the maximum size of any client 
-# connected to the *session*, constrain window size to the maximum size of any 
+# Rather than constraining window size to the maximum size of any client
+# connected to the *session*, constrain window size to the maximum size of any
 # client connected to *that window*. Much more reasonable.
 setw -g aggressive-resize on
 
@@ -31,7 +38,7 @@ setw -g aggressive-resize on
 #set-window-option -g window-status-current-bg red
 
 # use vim keybindings in copy mode
-setw -g mode-keys vi
+# setw -g mode-keys vi
 
 # status bar config
 set -g status-left ""
