--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,11 @@ sublime-text-3/**/*.cache
 sublime-text-3/**/*.last-run
 sublime-text-3/User/SFTP.sublime-settings
 sublime-text-3/User/SublimeGit.sublime-settings
+sublime-text-3/User/Package Control.last-run
+sublime-text-3/User/Package Control.ca-list
+sublime-text-3/User/Package Control.ca-bundle
+sublime-text-3/User/Package Control.system-ca-bundle
+sublime-text-3/User/Package Control.user-ca-bundle
+sublime-text-3/User/Package Control.cache/
+sublime-text-3/User/Package Control.ca-certs/
+sublime-text-3/User/SublimeLinter/
