--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,19 @@
 .DS_Store
 .*.swp
-_vim/.netrwhist
-_vim/bundle
-sublime-text-3/**/*.cache
-sublime-text-3/**/*.last-run
-sublime-text-3/User/SFTP.sublime-settings
-sublime-text-3/User/SublimeGit.sublime-settings
-sublime-text-3/User/Package Control.last-run
-sublime-text-3/User/Package Control.ca-list
-sublime-text-3/User/Package Control.ca-bundle
-sublime-text-3/User/Package Control.system-ca-bundle
-sublime-text-3/User/Package Control.user-ca-bundle
-sublime-text-3/User/Package Control.cache/
-sublime-text-3/User/Package Control.ca-certs/
-sublime-text-3/User/SublimeLinter/
+vim/_vim/.netrwhist
+vim/_vim/bundle
+git/_gitconfig.local
+sublime/**/*.cache
+sublime/**/*.last-run
+sublime/User/SFTP.sublime-settings
+sublime/User/SublimeGit.sublime-settings
+sublime/User/Package Control.last-run
+sublime/User/Package Control.ca-list
+sublime/User/Package Control.ca-bundle
+sublime/User/Package Control.merged-ca-bundle
+sublime/User/Package Control.system-ca-bundle
+sublime/User/Package Control.user-ca-bundle
+sublime/User/Package Control.cache/
+sublime/User/Package Control.ca-certs/
+sublime/User/SublimeLinter/
+sublime/User/oscrypto-ca-bundle.crt
