--- a/tmux/_tmux.conf
+++ b/tmux/_tmux.conf
@@ -45,7 +45,7 @@ setw -g aggressive-resize on
 set-window-option -g window-status-current-bg green
 
 # use vim keybindings in copy mode
-# setw -g mode-keys vi
+setw -g mode-keys vi
 
 # status bar config
 set -g status-left ""
@@ -64,6 +64,17 @@ bind-key -r S-Up    resize-pane -U
 bind-key -r S-Down  resize-pane -D
 bind-key -r S-Left  resize-pane -L
 bind-key -r S-Right resize-pane -R
+
+# vim-like hjkl keys to change panels
+# unbind-key j
+# unbind-key k
+# unbind-key h
+# unbind-key l
+bind-key -r j select-pane -D
+bind-key -r k select-pane -U
+bind-key -r h select-pane -L
+bind-key -r l select-pane -R
+
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
