--- a/tmux/_tmux.conf
+++ b/tmux/_tmux.conf
@@ -75,6 +75,9 @@ bind-key -r k select-pane -U
 bind-key -r h select-pane -L
 bind-key -r l select-pane -R
 
+# Copy/paste (OSX)
+bind-key -T copy-mode-vi 'v' send -X begin-selection
+bind-key -T copy-mode-vi 'y' send -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
