Remove default difftool, and set it in `.gitconfig.local`

--- a/git/gitconfig.local.example
+++ b/git/gitconfig.local.example
@@ -3,3 +3,8 @@
     email = AUTHOREMAIL
 [credential]
     helper = GIT_CREDENTIAL_HELPER
+
+[diff]
+    tool = Kaleidoscope
+[merge]
+    tool = Kaleidoscope
