--- a/tmux/_tmux.conf
+++ b/tmux/_tmux.conf
@@ -15,8 +15,9 @@ set-option -g default-command "reattach-to-user-namespace -l $SHELL"
 set -g @continuum-restore 'on'
 
 # look good
-#set -g default-terminal "xterm-256color"
-set -g default-terminal "screen-256color"
+set -g default-terminal "xterm"
+#set -g default-terminal "screen-256color"
+set -ga terminal-overrides ",xterm-256color:Tc"
 
 # Start window numbering at 1
 set -g base-index 1
