--- a/tmux/_tmux.conf
+++ b/tmux/_tmux.conf
@@ -44,12 +44,14 @@ setw -g aggressive-resize on
 # set -g status-right "#[fg=green]#H"
 
 # Highlight active window
-set-window-option -g window-status-current-bg green
+set-window-option -g window-status-current-bg colour255
 
 # use vim keybindings in copy mode
 setw -g mode-keys vi
 
 # status bar config
+set -g status-fg colour232
+set -g status-bg colour246
 set -g status-left ""
 set -g status-left-length 50
 set -g status-right-length 50
