--- a/tmux/_tmux.conf
+++ b/tmux/_tmux.conf
@@ -38,6 +38,7 @@ bind-key C-a last-window
 setw -g aggressive-resize on
 
 # Set status bar
+set-option -g status-position top
 # set -g status-bg black
 # set -g status-fg white
 # set -g status-left ""
@@ -78,6 +79,10 @@ bind-key -r j select-pane -D
 bind-key -r k select-pane -U
 bind-key -r h select-pane -L
 bind-key -r l select-pane -R
+
+# Move window left/right
+bind-key -n C-S-Left swap-window -t -1
+bind-key -n C-S-Right swap-window -t +1
 
 # Copy/paste (OSX)
 bind-key -T copy-mode-vi 'v' send -X begin-selection
