Tmux: when splitting panes, start from the current directory.
Added '|' and '-' for vertical and horizontal splits.

--- a/tmux/_tmux.conf
+++ b/tmux/_tmux.conf
@@ -63,6 +63,13 @@ setw -g window-status-current-format "|#I:#W|"
 # listen to alerts from all windows
 set -g bell-action any
 
+# Pane split
+bind-key c new-window      -c "#{pane_current_path}"
+bind-key % split-window -h -c "#{pane_current_path}"
+bind-key | split-window -h -c "#{pane_current_path}"
+bind-key '"' split-window -v -c "#{pane_current_path}"
+bind-key - split-window -v -c "#{pane_current_path}"
+
 # Add resize hotkeys for OS X (Ctrl-Arrows are for Mission Control)
 # Allow repeat (-r) to speed the process up
 bind-key -r S-Up    resize-pane -U
