--- a/tmux/_tmux.conf
+++ b/tmux/_tmux.conf
@@ -20,6 +20,17 @@ set -g @continuum-restore 'on'
 set -g default-terminal "xterm-256color"
 set -ga terminal-overrides ",xterm-256color:Tc"
 
+# set inactive/active window styles
+#set -g window-style 'fg=colour247,bg=colour236'
+set -g window-style 'fg=colour245,bg=colour0'
+set -g window-active-style 'fg=colour15,bg=colour0'
+
+#pane border
+set -g pane-border-bg colour0
+set -g pane-border-fg "#343d46"
+set -g pane-active-border-bg colour0
+set -g pane-active-border-fg colour15
+
 # Start window numbering at 1
 set -g base-index 1
 
@@ -51,8 +62,10 @@ set-window-option -g window-status-current-bg colour255
 setw -g mode-keys vi
 
 # status bar config
-set -g status-fg colour232
-set -g status-bg colour246
+set -g status-fg "#ffffff"
+set -g status-bg "#343d46"
+set -g window-status-current-fg "#ffffff"
+set -g window-status-current-bg colour8
 set -g status-left ""
 set -g status-left-length 50
 set -g status-right-length 50
