Vim support for toml; ~/.tmux.conf unix support.

--- a/tmux/_tmux.conf
+++ b/tmux/_tmux.conf
@@ -9,7 +9,7 @@ set -g @resurrect-capture-pane-contents 'on'
 # set-window-option -g utf8 on
 
 # Workaround for OSX
-set-option -g default-command "reattach-to-user-namespace -l $SHELL"
+set-option -g default-command "command -v reattach-to-user-namespace && reattach-to-user-namespace -l $SHELL || $SHELL"
 
 # Always restore last session
 set -g @continuum-restore 'on'
