Tmux: added plugins, pruned config

--- a/tmux/_tmux.conf
+++ b/tmux/_tmux.conf
@@ -1,27 +1,37 @@
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-pain-control'
+set -g @plugin 'tmux-plugins/tmux-copycat'
+set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @resurrect-capture-pane-contents 'on'
 
-# use UTF8
-# set -g utf8
-# set-window-option -g utf8 on
-
-# Workaround for OSX
-set-option -g default-command "command -v reattach-to-user-namespace && reattach-to-user-namespace -l $SHELL || $SHELL"
-
 # Always restore last session
 set -g @continuum-restore 'on'
 
-# look good
-#set -g default-terminal "xterm"
-#set -g default-terminal "screen-256color"
+# --------
+# Settings
+# --------
+
+set -g mouse on
+set -g set-clipboard external
+
+# Reduce key repeat-time (default: 500)
+set-option -g repeat-time 250
+
+# Pane titles
+#set -g set-titles 'on'
+
+# ----------
+# Appearance
+# ----------
+
 set -g default-terminal "xterm-256color"
 set -ga terminal-overrides ",xterm-256color:Tc"
 
 # set inactive/active window styles
-#set -g window-style 'fg=colour247,bg=colour236'
 set -g window-style 'fg=colour245,bg=colour0'
 set -g window-active-style 'fg=colour15,bg=colour0'
 
@@ -31,22 +41,6 @@ set -g pane-border-fg "#343d46"
 set -g pane-active-border-bg colour0
 set -g pane-active-border-fg colour15
 
-# Start window numbering at 1
-set -g base-index 1
-
-set -g set-titles 'on'
-
-# Pass fn-keys
-set-option -g xterm-keys 'on'
-
-# C-b is not acceptable -- Vim uses it
-set-option -g prefix C-a
-bind-key C-a last-window
-
-# Rather than constraining window size to the maximum size of any client
-# connected to the *session*, constrain window size to the maximum size of any
-# client connected to *that window*. Much more reasonable.
-setw -g aggressive-resize on
 
 # Set status bar
 set-option -g status-position top
@@ -57,9 +51,6 @@ set-option -g status-position top
 
 # Highlight active window
 set-window-option -g window-status-current-bg colour255
-
-# use vim keybindings in copy mode
-setw -g mode-keys vi
 
 # status bar config
 set -g status-fg "#ffffff"
@@ -76,37 +67,20 @@ setw -g window-status-current-format "|#I:#W|"
 # listen to alerts from all windows
 set -g bell-action any
 
-# Pane split
-bind-key c new-window      -c "#{pane_current_path}"
-bind-key % split-window -h -c "#{pane_current_path}"
-bind-key | split-window -h -c "#{pane_current_path}"
-bind-key '"' split-window -v -c "#{pane_current_path}"
-bind-key - split-window -v -c "#{pane_current_path}"
+# ------------
+# Key settings
+# ------------
 
-# Add resize hotkeys for OS X (Ctrl-Arrows are for Mission Control)
-# Allow repeat (-r) to speed the process up
-bind-key -r S-Up    resize-pane -U
-bind-key -r S-Down  resize-pane -D
-bind-key -r S-Left  resize-pane -L
-bind-key -r S-Right resize-pane -R
+# C-b is not acceptable -- Vim uses it
+unbind C-b
+set-option -g prefix C-a
+bind-key C-a last-window
 
-# vim-like hjkl keys to change panels
-# unbind-key j
-# unbind-key k
-# unbind-key h
-# unbind-key l
-bind-key -r j select-pane -D
-bind-key -r k select-pane -U
-bind-key -r h select-pane -L
-bind-key -r l select-pane -R
+# Pass fn-keys
+set-option -g xterm-keys 'on'
 
-# Move window left/right
-bind-key -n C-S-Left swap-window -t -1
-bind-key -n C-S-Right swap-window -t +1
-
-# Copy/paste (OSX)
-bind-key -T copy-mode-vi 'v' send -X begin-selection
-bind-key -T copy-mode-vi 'y' send -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
+# use vim keybindings in copy mode
+setw -g mode-keys vi
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-run '~/.tmux/plugins/tpm/tpm'
+run -b '~/.tmux/plugins/tpm/tpm'
