tmux/vim tweaks

--- a/tmux/_tmux.conf
+++ b/tmux/_tmux.conf
@@ -1,7 +1,6 @@
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'tmux-plugins/tmux-pain-control'
 set -g @plugin 'tmux-plugins/tmux-copycat'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
@@ -15,11 +14,11 @@ set -g @continuum-restore 'on'
 # Settings
 # --------
 
-set -g mouse on
+# set -g mouse on
 set -g set-clipboard external
 
 # Reduce key repeat-time (default: 500)
-set-option -g repeat-time 250
+set-option -g repeat-time 500
 
 # Pane titles
 #set -g set-titles 'on'
@@ -71,16 +70,46 @@ set -g bell-action any
 # Key settings
 # ------------
 
-# C-b is not acceptable -- Vim uses it
-unbind C-b
-set-option -g prefix C-a
-bind-key C-a last-window
-
 # Pass fn-keys
 set-option -g xterm-keys 'on'
 
 # use vim keybindings in copy mode
 setw -g mode-keys vi
 
+# C-b is not acceptable -- Vim uses it
+unbind C-b
+set-option -g prefix C-a
+bind-key C-a last-window
+
+# Vim hjkl to change panes (repeatable with ctrl)
+bind-key h select-pane -L
+bind-key j select-pane -D
+bind-key k select-pane -U
+bind-key l select-pane -R
+bind-key -r C-h select-pane -L
+bind-key -r C-j select-pane -D
+bind-key -r C-k select-pane -U
+bind-key -r C-l select-pane -R
+
+# Change panes with arrows non-repeatable
+bind-key Left select-pane -L
+bind-key Down select-pane -D
+bind-key Up select-pane -U
+bind-key Right select-pane -R
+
+# Move windows
+bind-key -r "<" swap-window -t -1
+bind-key -r ">" swap-window -t +1
+
+# Splits
+bind-key "|" split-window -h -c "#{pane_current_path}"
+bind-key "\\" split-window -fh -c "#{pane_current_path}"
+bind-key "-" split-window -v -c "#{pane_current_path}"
+bind-key "_" split-window -fv -c "#{pane_current_path}"
+bind-key "%" split-window -h -c "#{pane_current_path}"
+bind-key '"' split-window -v -c "#{pane_current_path}"
+
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run -b '~/.tmux/plugins/tpm/tpm'
+
+# unbind -a C-h
