--- a/tmux/_tmux.conf
+++ b/tmux/_tmux.conf
@@ -70,6 +70,10 @@ set -g bell-action any
 # Key settings
 # ------------
 
+# Home/End keys
+bind-key -n End send-key C-e
+bind-key -n Home send-key C-a
+
 # Pass fn-keys
 set-option -g xterm-keys 'on'
 
