--- a/tmux/_tmux.conf
+++ b/tmux/_tmux.conf
@@ -113,6 +113,10 @@ bind-key "_" split-window -fv -c "#{pane_current_path}"
 bind-key "%" split-window -h -c "#{pane_current_path}"
 bind-key '"' split-window -v -c "#{pane_current_path}"
 
+# Copy/paste
+unbind-key -T copy-mode-vi 'v'      ; bind-key -T copy-mode-vi 'v' send-keys -X begin-selection
+unbind-key -T copy-mode-vi 'y'      ; bind-key -T copy-mode-vi 'y' send-keys -X copy-selection
+
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run -b '~/.tmux/plugins/tpm/tpm'
 
