Remove unneeded clipboard setting.

--- a/tmux/_tmux.conf
+++ b/tmux/_tmux.conf
@@ -15,7 +15,7 @@ set -g @continuum-restore 'on'
 # --------
 
 # set -g mouse on
-set -g set-clipboard external
+set -g set-clipboard on
 
 # Reduce key repeat-time (default: 500)
 set-option -g repeat-time 500
