Disable continuum, set custom layout with M-0

--- a/tmux/_tmux.conf
+++ b/tmux/_tmux.conf
@@ -4,11 +4,7 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-copycat'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
-set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @resurrect-capture-pane-contents 'on'
-
-# Always restore last session
-set -g @continuum-restore 'on'
 
 # --------
 # Settings
@@ -18,10 +14,10 @@ set -g @continuum-restore 'on'
 set -g set-clipboard on
 
 # Reduce key repeat-time (default: 500)
-set-option -g repeat-time 500
+set -g repeat-time 500
 
 # Pane titles
-#set -g set-titles 'on'
+# set -g set-titles 'on'
 
 # ----------
 # Appearance
@@ -42,7 +38,7 @@ set -g pane-active-border-fg colour15
 
 
 # Set status bar
-set-option -g status-position top
+set -g status-position top
 # set -g status-bg black
 # set -g status-fg white
 # set -g status-left ""
@@ -83,7 +79,7 @@ setw -g mode-keys vi
 # C-b is not acceptable -- Vim uses it
 unbind C-b
 set-option -g prefix C-a
-bind-key C-a last-window
+bind-key C-a last-pane
 
 # Vim hjkl to change panes (repeatable with ctrl)
 bind-key h select-pane -L
@@ -112,6 +108,9 @@ bind-key "-" split-window -v -c "#{pane_current_path}"
 bind-key "_" split-window -fv -c "#{pane_current_path}"
 bind-key "%" split-window -h -c "#{pane_current_path}"
 bind-key '"' split-window -v -c "#{pane_current_path}"
+
+# enlarged-first-pane vertical layout
+bind-key M-0 select-layout main-vertical\; resize-pane -t 0 -x 200
 
 # Copy/paste
 unbind-key -T copy-mode-vi 'v'      ; bind-key -T copy-mode-vi 'v' send-keys -X begin-selection
