--- a/tmux/_tmux.conf
+++ b/tmux/_tmux.conf
@@ -27,14 +27,12 @@ set -g default-terminal "xterm-256color"
 set -ga terminal-overrides ",xterm-256color:Tc"
 
 # set inactive/active window styles
-set -g window-style 'fg=colour245,bg=colour0'
-set -g window-active-style 'fg=colour15,bg=colour0'
+set -g window-style fg=colour245,bg=colour0
+set -g window-active-style fg=colour15,bg=colour0
 
 #pane border
-set -g pane-border-bg colour0
-set -g pane-border-fg "#343d46"
-set -g pane-active-border-bg colour0
-set -g pane-active-border-fg colour15
+set -g pane-border-style fg=#343d46,bg=colour0
+set -g pane-active-border-style bg=colour0,fg=colour15
 
 
 # Set status bar
@@ -45,13 +43,11 @@ set -g status-position top
 # set -g status-right "#[fg=green]#H"
 
 # Highlight active window
-set-window-option -g window-status-current-bg colour255
+set-window-option -g window-status-current-style bg=colour255
 
 # status bar config
-set -g status-fg "#ffffff"
-set -g status-bg "#343d46"
-set -g window-status-current-fg "#ffffff"
-set -g window-status-current-bg colour8
+set -g status-style fg=#ffffff,bg=#343d46
+set -g window-status-current-style fg=#ffffff,bg=colour8
 set -g status-left ""
 set -g status-left-length 50
 set -g status-right-length 50
