vim/tmux updates

--- a/tmux/_tmux.conf
+++ b/tmux/_tmux.conf
@@ -10,6 +10,8 @@ set -g @resurrect-capture-pane-contents 'on'
 # Settings
 # --------
 
+set -g default-shell $SHELL
+
 # set -g mouse on
 set -g set-clipboard on
 
