Tmux: continuum on by default; vim theme fixes

--- a/tmux/_tmux.conf
+++ b/tmux/_tmux.conf
@@ -4,7 +4,9 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-copycat'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @resurrect-capture-pane-contents 'on'
+set -g @continuum-restore 'on'
 
 # --------
 # Settings
@@ -33,7 +35,7 @@ set -g window-style fg=colour245,bg=colour0
 set -g window-active-style fg=colour15,bg=colour0
 
 #pane border
-set -g pane-border-style fg=#343d46,bg=colour0
+set -g pane-border-style fg=colour240,bg=colour0
 set -g pane-active-border-style bg=colour0,fg=colour15
 
 
