--- a/tmux/_tmux.conf
+++ b/tmux/_tmux.conf
@@ -6,7 +6,7 @@ set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @resurrect-capture-pane-contents 'on'
-set -g @continuum-restore 'on'
+# set -g @continuum-restore 'on'
 
 # --------
 # Settings
