updates for M1 mac

--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,4 @@ sublime/User/Package Control.cache/
 sublime/User/Package Control.ca-certs/
 sublime/User/SublimeLinter/
 sublime/User/oscrypto-ca-bundle.crt
+homebrew/Brewfile.lock.json
