SSH-Agent Tmux fixes

--- a/tmux/_tmux.conf
+++ b/tmux/_tmux.conf
@@ -120,3 +120,11 @@ unbind-key -T copy-mode-vi 'y'      ; bind-key -T copy-mode-vi 'y' send-keys -X 
 run -b '~/.tmux/plugins/tpm/tpm'
 
 # unbind -a C-h
+
+# SSH Agent fix: https://blog.testdouble.com/posts/2016-11-18-reconciling-tmux-and-ssh-agent-forwarding/
+# Remove SSH_AUTH_SOCK to disable tmux automatically resetting the variable
+set -g update-environment "DISPLAY SSH_ASKPASS SSH_AGENT_PID \
+                             SSH_CONNECTION WINDOWID XAUTHORITY"
+# Use a symlink to look up SSH authentication
+setenv -g SSH_AUTH_SOCK $HOME/.ssh/ssh_auth_sock
+
