Added .ssh/rc to handle ssh-agent, incl. in tmux

--- a/tmux/_tmux.conf
+++ b/tmux/_tmux.conf
@@ -121,10 +121,6 @@ run -b '~/.tmux/plugins/tpm/tpm'
 
 # unbind -a C-h
 
-# SSH Agent fix: https://blog.testdouble.com/posts/2016-11-18-reconciling-tmux-and-ssh-agent-forwarding/
-# Remove SSH_AUTH_SOCK to disable tmux automatically resetting the variable
-set -g update-environment "DISPLAY SSH_ASKPASS SSH_AGENT_PID \
-                             SSH_CONNECTION WINDOWID XAUTHORITY"
-# Use a symlink to look up SSH authentication
-setenv -g SSH_AUTH_SOCK $HOME/.ssh/ssh_auth_sock
-
+# SSH Agent fix
+set -g update-environment -r
+setenv -g 'SSH_AUTH_SOCK' ~/.ssh/ssh_auth_sock
