Tmux ssh-agent fix

--- a/tmux/_tmux.conf
+++ b/tmux/_tmux.conf
@@ -123,4 +123,4 @@ run -b '~/.tmux/plugins/tpm/tpm'
 
 # SSH Agent fix
 set -g update-environment -r
-setenv -g 'SSH_AUTH_SOCK' ~/.ssh/ssh_auth_sock
+if-shell "test '$SSH_CLIENT'" { setenv -g 'SSH_AUTH_SOCK' ~/.ssh/ssh_auth_sock }
