--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,8 @@
 .DS_Store
 .*.swp
-vim/_vim/.netrwhist
-vim/_vim/bundle/
-vim/_vim/plugged/
-vim/_vim/autoload/
-vim/_vim/black/
-git/_gitconfig.local
-sublime/**/*.cache
-sublime/**/*.last-run
-sublime/User/SFTP.sublime-settings
-sublime/User/SublimeGit.sublime-settings
-sublime/User/Package Control.last-run
-sublime/User/Package Control.ca-list
-sublime/User/Package Control.ca-bundle
-sublime/User/Package Control.merged-ca-bundle
-sublime/User/Package Control.system-ca-bundle
-sublime/User/Package Control.user-ca-bundle
-sublime/User/Package Control.cache/
-sublime/User/Package Control.ca-certs/
-sublime/User/SublimeLinter/
-sublime/User/oscrypto-ca-bundle.crt
-homebrew/Brewfile.lock.json
+_vim/.netrwhist
+_vim/bundle/
+_vim/plugged/
+_vim/autoload/
+_vim/black/
+Brewfile.lock.json
