--- a/_tmux.conf
+++ b/_tmux.conf
@@ -116,11 +116,12 @@ bind-key M-0 select-layout main-vertical\; resize-pane -t 0 -x 200
 unbind-key -T copy-mode-vi 'v'      ; bind-key -T copy-mode-vi 'v' send-keys -X begin-selection
 unbind-key -T copy-mode-vi 'y'      ; bind-key -T copy-mode-vi 'y' send-keys -X copy-selection
 
-# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-run -b '~/.tmux/plugins/tpm/tpm'
-
-# unbind -a C-h
-
 # SSH Agent fix
 set -g update-environment -r
 if-shell "test '$SSH_CLIENT'" { setenv -g 'SSH_AUTH_SOCK' ~/.ssh/ssh_auth_sock }
+
+# Load local overrides?
+source-file ~/.tmux.conf.local
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run -b '~/.tmux/plugins/tpm/tpm'
