Tmux $TERM fixes

--- a/_tmux.conf
+++ b/_tmux.conf
@@ -27,8 +27,8 @@ set -g repeat-time 500
 # Appearance
 # ----------
 
-set -g default-terminal "xterm-256color"
-set -ga terminal-overrides ",xterm-256color:Tc"
+set -g default-terminal "tmux-256color"
+set -ga terminal-overrides ",tmux-256color:Tc"
 
 # set inactive/active window styles
 set -g window-style fg=colour245,bg=colour0
