TMUX: load local config only when present

--- a/_tmux.conf
+++ b/_tmux.conf
@@ -121,7 +121,9 @@ set -g update-environment -r
 if-shell "test '$SSH_CLIENT'" { setenv -g 'SSH_AUTH_SOCK' ~/.ssh/ssh_auth_sock }
 
 # Load local overrides?
-source-file ~/.tmux.conf.local
+if-shell '[ -f "$HOME/.tmux.conf.local" ]' {
+    source-file $HOME/.tmux.conf.local
+}
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run -b '~/.tmux/plugins/tpm/tpm'
