tmux fixes, neovim ftplugin

--- a/_tmux.conf
+++ b/_tmux.conf
@@ -31,13 +31,12 @@ set -g default-terminal "tmux-256color"
 set -ga terminal-overrides ",tmux-256color:Tc"
 
 # set inactive/active window styles
-set -g window-style fg=colour245,bg=colour0
-set -g window-active-style fg=colour15,bg=colour0
+set -g window-style fg=colour245
+set -g window-active-style fg=colour15
 
-#pane border
+# pane border
 set -g pane-border-style fg=colour240,bg=colour0
 set -g pane-active-border-style bg=colour0,fg=colour15
-
 
 # Set status bar
 set -g status-position top
