`venv` alias fixes

--- a/_tmux.conf
+++ b/_tmux.conf
@@ -30,6 +30,9 @@ set -g repeat-time 500
 set -g default-terminal "tmux-256color"
 set -ga terminal-overrides ",tmux-256color:Tc"
 
+# If the machine doesn't support the tmux-* terminfo, add the following line to add support for italics
+# set -ga terminal-overrides ',xterm-256color:sitm=\E[3m'
+
 # set inactive/active window styles
 set -g window-style fg=colour245
 set -g window-active-style fg=colour15
