TMUX: refactor status bar

--- a/_tmux.conf
+++ b/_tmux.conf
@@ -1,3 +1,24 @@
+#
+# Oceanic Next color palette:
+# https://github.com/voronianski/oceanic-next-color-scheme?tab=readme-ov-file#color-palette
+# base 00: #1B2B34 (black)
+# base 01: #343D46 (darkest gray)
+# base 02: #4F5B66 (dark gray)
+# base 03: #65737E (...)
+# base 04: #A7ADBA
+# base 05: #C0C5CE
+# base 06: #CDD3DE
+# base 07: #D8DEE9
+# base 08: #EC5f67 (lightest gray)
+# base 09: #F99157 (red)
+# base 0A: #FAC863 (orange)
+# base 0B: #99C794 (green)
+# base 0C: #5FB3B3 (dark green)
+# base 0D: #6699CC (blue)
+# base 0E: #C594C5 (pink)
+# base 0F: #AB7967 (brown)
+#
+
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
@@ -21,7 +42,7 @@ set -g set-clipboard on
 set -g repeat-time 500
 
 # Pane titles
-# set -g set-titles 'on'
+set -g set-titles 'on'
 
 # ----------
 # Appearance
@@ -35,31 +56,30 @@ set -ga terminal-overrides ",tmux-256color:Tc"
 
 # set inactive/active window styles
 set -g window-style fg=colour245
-set -g window-active-style fg=colour15
+set -g window-active-style fg=white
 
 # pane border
-set -g pane-border-style fg=colour240,bg=colour0
-set -g pane-active-border-style bg=colour0,fg=colour15
-
-# Set status bar
-set -g status-position top
-# set -g status-bg black
-# set -g status-fg white
-# set -g status-left ""
-# set -g status-right "#[fg=green]#H"
+set -g pane-border-style fg=#4F5B66
+set -g pane-active-border-style fg=#99C794
 
 # Highlight active window
 set-window-option -g window-status-current-style bg=colour255
+# set-window-option -g window-status-current-style bg=red
 
 # status bar config
-set -g status-style fg=#ffffff,bg=#343d46
-set -g window-status-current-style fg=#ffffff,bg=colour8
-set -g status-left ""
+# characters:    
+set -g status-position bottom
+set -g status-style fg=white,bg=#343D46
+set -g window-status-style fg=default
+set -g window-status-current-style fg=green
+set -g status-left "#[bg=#343D46,fg=white]  ⧉ #S  #[fg=#343D46]"
 set -g status-left-length 50
 set -g status-right-length 50
-set -g status-right "|#h| %H:%M %d-%h-%Y"
-setw -g window-status-current-format "|#I:#W|"
-# set-window-option -g automatic-rename off
+# set -g status-right "#[fg=#99C794,bg=#343d46]#[bg=green,fg=#4F5B66] #h #[fg=#343D46]#[bg=#343D46,fg=#4F5B66]#[fg=default,bg=#4F5B66] %H:%M %d-%h-%Y "
+set -g status-right "#[fg=#4F5B66,bg=#343D46]#[bg=#4F5B66,fg=default] #h #[fg=#343D46]#[bg=#343D46,fg=default] %H:%M #[fg=#4F5B66]#[fg=default] %d-%m-%Y "
+setw -g window-status-current-format "#[bg=green,fg=#343D46,bold] #I  #W #[fg=green,bg=#343d46]"
+setw -g window-status-format "#[bg=#4F5B66,fg=#343D46]#[fg=default] #I #[fg=default]#[fg=default] #W #[bg=#343D46,fg=#4F5B66]"
+setw -g window-status-separator ""
 
 # listen to alerts from all windows
 set -g bell-action any
