Tmux/Vim color fixes; pyenv support

--- a/_tmux.conf
+++ b/_tmux.conf
@@ -49,7 +49,7 @@ set -g set-titles 'on'
 # ----------
 
 set -g default-terminal "tmux-256color"
-set -ga terminal-overrides ",tmux-256color:Tc"
+set -ga terminal-overrides ",*256col*:Tc"
 
 # If the machine doesn't support the tmux-* terminfo, add the following line to add support for italics
 # set -ga terminal-overrides ',xterm-256color:sitm=\E[3m'
